# supernes_emu

./: .gitignore  Cargo.toml  README.md
.claude/agents/: snes-component-builder.md  snes-debugger.md  snes-hw-verifier.md
.claude/skills/snes-build-test/: SKILL.md
.claude/skills/snes-refs/: SKILL.md
.claude/skills/snes-refs/references/: apu.md  cpu-65c816.md  cx4.md  dsp1.md  mmio.md  ppu.md  sa1.md  superfx.md  timing.md
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/src/: bus.rs  dma.rs  joypad.rs  lib.rs  scheduler.rs  serde_util.rs  snes.rs
core/src/apu/: brr.rs  dsp.rs  ipl.rs  mod.rs  spc700.rs
core/src/cartridge/: mapping.rs  mod.rs  sram.rs
core/src/coprocessor/: mod.rs
core/src/coprocessor/cx4/: mod.rs  ops.rs  tables.rs  tests.rs
core/src/coprocessor/dsp1/: commands.rs  mod.rs  tables.rs  tests.rs
core/src/coprocessor/sa1/: cpu.rs  io.rs  math.rs  mmc.rs  mod.rs  tests.rs
core/src/coprocessor/superfx/: gsu.rs  mod.rs  plot.rs  regs.rs  tests.rs
core/src/cpu/: addressing.rs  algorithms.rs  mod.rs  ops.rs
core/src/debug/: disasm.rs  gsu_disasm.rs  gsu_trace.rs  mod.rs  spc_disasm.rs  trace.rs
core/src/ppu/: background.rs  color_math.rs  mod.rs  mode7.rs  render.rs  sprites.rs  window.rs
docs/: ARCHITECTURE.md  IDEAS.md  PUNCHLIST.md  RAPPORT-BUILD.md  ROADMAP.md  emulateur-snes-explique.html  rapport-build.html
frontend/: Cargo.toml
frontend/src/: audio.rs  input.rs  main.rs  menu.rs  picker.rs  prefs.rs  save.rs  spc.rs  state.rs  video.rs
packaging/: AppIcon.icns
scripts/: make-app.sh
